# Alternative-data-portfolio-optimization-bachelor

./: .gitattributes  .gitignore  Makefile  README.md  SOURCE_OF_TRUTH.md  pyproject.toml  requirements.txt
analysis/: build_container_index.py  build_index_report.py  build_inference_input.py  port_country_map.py
analysis/return_forecasting/: README.md  __init__.py  apply_final_treasury_adjustment.py  build_final_mad_tables.py  build_mad_shorting_sensitivity.py  data.py  evaluation.py  run_cleaned_research_suite.py  run_final_usd19_mad_suite.py  run_gnc_ablation.py  run_mad_transaction_costs.py
data/code/: Fjern_afskaaret.py  Fjern_skyer_manila_shanghai.py  Hent_billederne.py  README.md  analyze_zip_inventory.py  data_bbox.py  dataset_contract.py  prepare_splits.py
docs/: REPRODUCTION.md  RESULTS.md  STALE_EXCLUSIONS.md
models/ml/unet/: roi.py  (+7 more)
pipelines/: FINAL_PIPELINE_TRACKER.md  final_artifact_manifest.csv  final_code_manifest.csv  final_report_claims.csv  final_selected_model_tau04_bd5d48e.json  run_pipeline.py  run_segmentation_pipeline.py  segmentation_config.example.yaml
report_regen_2026-06-11/: assemble_final_figures.py  best.pt  final_model03_retrain_insert.tex  regen_appendix_gnc_tau04.py  regen_best_config_tau04.py  regen_container_figs_tau04.py  regen_final_model03_training_figs.py  regen_mad_figs_tau04.py  regen_panels_tau04.py  regen_pocket_tau04.py  regen_pocket_wealth_tau04.py  regen_scatter_tau04.py  regen_segmentation_figs_tau04.py  regen_test_grid_tau04.py  unet_roi_cb031ac.py
tests/: test_final_pipeline_lock.py  test_return_forecasting.py
(+109 files in other folders)
