[project]
name = "alternative-data-portfolio-optimization-bachelor"
version = "1.0.0"
description = "Locked bachelor thesis pipeline for satellite-derived container-port activity, GNC signals, return forecasts, and MAD portfolio optimization."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
